--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Name</title>
+    <title>Eldhose K A</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/materialize.min.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/timeline.css" />
