--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section style="min-height: 100vh;">
         <div class="row picsecparent">
             <div class="col s12 grey darken-3 height25">
-                <h4 class="white-text center-align">John Smith</h4>
+                <h4 class="white-text center-align">Eldhose K A</h4>
                 <h6 class="grey-text center-align">Student</h6>
             </div>
             <div class="center-align picsecchild01">
