Modified Mobile Layout

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <li><a href="#">Link 4</a></li>
     </ul>
     <!-- -------------------------------------------------------------------------------------------------------- -->
-    <section style="min-height: 100vh;">
+    <section>
         <div class="row picsecparent">
-            <div class="col s12 grey darken-3 height25">
+            <div class="col s12 grey darken-3 heightNameSec">
                 <h4 class="white-text center-align">Eldhose K A</h4>
                 <h6 class="grey-text center-align">Student</h6>
             </div>
@@ -44,9 +44,9 @@
                 <img alt="Name" src="images/paceholder2.jpg" class="picsecchild02 z-depth-4" />
             </div>
         </div>
-        <div class="row">
-            <div class="col s8 offset-s2 z-depth-2">
-                <div class="height10"></div>
+        <div class="row paddingIntroductionSec">
+            <div class="col s12 m10 l8 offset-m1 offset-l2 z-depth-2">
+                <div class="heightIntroductionSec"></div>
                 <div class="contacticons"></div>
                 <div class="aboutme raleway">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean maximus est finibus mauris tempus
@@ -58,10 +58,10 @@
                     imperdiet massa ac sem tempor rutrum.
                 </div>
                 <div class="row aboutme">
-                    <div class="col s3 offset-s3 center-align">
+                    <div class="col s10 m5 l3 offset-s1 offset-m1 offset-l3 center-align buttonMarginIntroductionSec">
                         <a class="waves-effect waves-light btn extend grey darken-3" href="#">DOWNLOAD CV</a>
                     </div>
-                    <div class="col s3 center-align">
+                    <div class="col s10 m5 l3 offset-s1 center-align">
                         <a class="waves-effect waves-light btn extend grey darken-3" href="#">CONTACT ME</a>
                     </div>
                 </div>
@@ -84,10 +84,11 @@
                 <br />
             </div>
             <div class="row">
-                <div class="col s12 m6 l3 offset-l2 offset-m3">
+                <div class="col s12 m10 l3 offset-l2 offset-m1">
                     <div class="z-depth-2 skillsec01">
-                        <div class="center-align skillsec02"><span
-                                class="grey darken-3 white-text z-depth-2 skillsec03">TECHNICAL</span></div>
+                        <div class="center-align skillsec02">
+                            <span class="grey darken-3 white-text z-depth-2 skillsec03">TECHNICAL</span>
+                        </div>
                         <div class="skillbar-wrapper">
                             <div class="skillbar" data-percent="55%">
                                 <div class="skillbar-title">Web design</div>
@@ -122,16 +123,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m6 l5 offset-m3">
+                <div class="col s12 m10 l5 offset-m1">
                     <div class="z-depth-2 skillsec01">
-                        <div class="center-align skillsec02"><span
-                                class="grey darken-3 white-text z-depth-2 skillsec03">ADDITIONAL SKILLS</span></div>
+                        <div class="center-align skillsec02">
+                            <span class="grey darken-3 white-text z-depth-2 skillsec03">ADDITIONAL SKILLS</span>
+                        </div>
                         <div class="skillsec04">
                             <div class="row">
                                 <div class="col s12 m7 l6">
                                     <div class="row skillseccircle">
                                         <div class="col s7">
-                                            <div class="height01"></div>
+                                            <div class="heightSkillCircle"></div>
                                             <div class="c100 p12 small">
                                                 <span>12%</span>
                                                 <div class="slice">
@@ -147,7 +149,7 @@
                                     </div>
                                     <div class="row skillseccircle">
                                         <div class="col s7">
-                                            <div class="height01"></div>
+                                            <div class="heightSkillCircle"></div>
                                             <div class="c100 p12 small">
                                                 <span>12%</span>
                                                 <div class="slice">
@@ -163,7 +165,7 @@
                                     </div>
                                     <div class="row skillseccircle">
                                         <div class="col s7">
-                                            <div class="height01"></div>
+                                            <div class="heightSkillCircle"></div>
                                             <div class="c100 p12 small">
                                                 <span>12%</span>
                                                 <div class="slice">
